[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/WAT/assets/icon_add.png" type="Texture" id=1]
[ext_resource path="res://addons/WAT/ui/results/ResultsForest.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/WAT/gui.gd" type="Script" id=3]
[ext_resource path="res://addons/WAT/assets/play.png" type="Texture" id=4]
[ext_resource path="res://addons/WAT/assets/kofi.png" type="Texture" id=9]

[node name="Tests" type="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interact" type="HBoxContainer" parent="GUI"]
margin_right = 1010.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run" type="HBoxContainer" parent="GUI/Interact"]
margin_right = 76.0
margin_bottom = 24.0

[node name="QuickStart" type="Button" parent="GUI/Interact/Run"]
margin_right = 28.0
margin_bottom = 24.0
hint_tooltip = "Run All Tests"
icon = ExtResource( 4 )
flat = true

[node name="VSeparator" type="VSeparator" parent="GUI/Interact/Run"]
margin_left = 32.0
margin_right = 36.0
margin_bottom = 24.0

[node name="Menu" type="MenuButton" parent="GUI/Interact/Run"]
margin_left = 40.0
margin_right = 76.0
margin_bottom = 24.0
text = "Run"
items = [ "Run All Tests", null, 0, false, false, 0, 0, null, "", false, "Run Selected Directory", null, 0, false, false, 1, 0, null, "", false, "Run Selected Script", null, 0, false, false, 2, 0, null, "", false, "Run Tagged", null, 0, false, false, 3, 0, null, "", false, "Run Method", null, 0, false, false, 4, 0, null, "", false, "Rerun Failures", null, 0, false, false, 5, 0, null, "", false ]
switch_on_hover = true

[node name="View" type="MenuButton" parent="GUI/Interact"]
margin_left = 86.0
margin_right = 128.0
margin_bottom = 24.0
text = "View"
items = [ "Expand All Results", null, 0, false, false, 0, 0, null, "", false, "Collapse All Results", null, 0, false, false, 1, 0, null, "", false, "Expand All Failures", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true

[node name="VSeparator" type="VSeparator" parent="GUI/Interact"]
margin_left = 138.0
margin_right = 142.0
margin_bottom = 24.0

[node name="Select" type="HBoxContainer" parent="GUI/Interact"]
margin_left = 152.0
margin_right = 818.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Directory" type="OptionButton" parent="GUI/Interact/Select"]
margin_right = 219.0
margin_bottom = 24.0
grow_horizontal = 0
grow_vertical = 0
hint_tooltip = "select a directory of tests to run"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 20
button_mask = 3
text = "Select Directory"
align = 1
items = [ "Select Directory", null, false, 0, null ]
selected = 0

[node name="Script" type="OptionButton" parent="GUI/Interact/Select"]
margin_left = 223.0
margin_right = 442.0
margin_bottom = 24.0
hint_tooltip = "Select a single test script to run (your choices depend on which folder is selected)."
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Select Script"
align = 1
items = [ "Select Script", null, false, 0, null ]
selected = 0
__meta__ = {
"_editor_description_": "select a test script to run"
}

[node name="Tag" type="OptionButton" parent="GUI/Interact/Select"]
margin_left = 446.0
margin_right = 666.0
margin_bottom = 24.0
hint_tooltip = "select a tag and then run all tests that have that tag"
size_flags_horizontal = 3
text = "Select Tag"
align = 1
items = [ "Select Tag", null, false, 0, null ]
selected = 0

[node name="VSeparator2" type="VSeparator" parent="GUI/Interact"]
margin_left = 828.0
margin_right = 832.0
margin_bottom = 24.0

[node name="Repeat" type="SpinBox" parent="GUI/Interact"]
margin_left = 842.0
margin_right = 972.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
size_flags_horizontal = 0
max_value = 10.0
value = 1.0
allow_greater = true
allow_lesser = true
prefix = "Repeat"
suffix = "Times"

[node name="More" type="Button" parent="GUI/Interact"]
margin_left = 982.0
margin_right = 1010.0
margin_bottom = 24.0
icon = ExtResource( 1 )
flat = true

[node name="HiddenBorder" type="HSeparator" parent="GUI"]
visible = false
margin_top = 28.0
margin_right = 1010.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3

[node name="Method" type="OptionButton" parent="GUI"]
visible = false
margin_top = 28.0
margin_right = 1010.0
margin_bottom = 48.0
text = "Run Test Method"
align = 1

[node name="Results" parent="GUI" instance=ExtResource( 2 )]
margin_top = 28.0
margin_bottom = 518.0

[node name="Summary" type="Label" parent="GUI"]
margin_top = 522.0
margin_right = 1010.0
margin_bottom = 536.0
size_flags_vertical = 1
text = "Time Taken: 0.00 | Ran 0 Tests | 0 Tests Passed | 0 Tests Failed | Ran Tests 0 Times"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopSeperator" type="HSeparator" parent="GUI"]
margin_top = 540.0
margin_right = 1010.0
margin_bottom = 544.0
size_flags_horizontal = 3

[node name="Links" type="HBoxContainer" parent="GUI"]
margin_top = 548.0
margin_right = 1010.0
margin_bottom = 578.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Support" type="Button" parent="GUI/Links"]
margin_right = 249.0
margin_bottom = 30.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 30, 30 )
hint_tooltip = "Support WAT on Kofi"
focus_mode = 1
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 1
text = "  Support WAT   "
icon = ExtResource( 9 )
flat = true
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="GUI/Links"]
margin_left = 249.0
margin_right = 253.0
margin_bottom = 30.0

[node name="Issue" type="Button" parent="GUI/Links"]
margin_left = 253.0
margin_right = 502.0
margin_bottom = 30.0
size_flags_horizontal = 3
shortcut_in_tooltip = false
action_mode = 0
text = "Report An Issue"
flat = true

[node name="VSeparator2" type="VSeparator" parent="GUI/Links"]
margin_left = 502.0
margin_right = 506.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestDocs" type="Button" parent="GUI/Links"]
margin_left = 506.0
margin_right = 755.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "Request Docs"
flat = true

[node name="VSeparator3" type="VSeparator" parent="GUI/Links"]
margin_left = 755.0
margin_right = 759.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnlineDocs" type="Button" parent="GUI/Links"]
margin_left = 759.0
margin_right = 1010.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Online Docs"
flat = true

[node name="BottomSeperator" type="HSeparator" parent="GUI"]
margin_top = 582.0
margin_right = 1010.0
margin_bottom = 586.0
